--- a/gb/3/10/18/n395865.md
+++ b/gb/3/10/18/n395865.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/baxuov3928/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/baxuov3928/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/baxuov3928/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/baxuov3928/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/baxuov3928/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/baxuov3928/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/baxuov3928/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/baxuov3928/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>小家具家居神来之笔</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/us-election-voter-fraud__1200x800-320x200.jpg" />
+
 <h6></h6>
 <hr>
 	<p>【大纪元10月18日讯】在家居空间有限的今天，不少人因家中小杂物太多而为难。</p>
-<p>　　其实只要逛逛<ahref="https://github.com/baxuov3928/djy/blob/master/gb/tag/%E5%AE%B6%E5%85%B7.md#1">家具</a>市场，就会有不少启发——许多别出心裁的“家具小品”，占地不多却能有收纳的功效，只要合适选择即可达致电美化居室外的效果，这已成为家居布置的一种时尚。</p>
+<p>　　其实只要逛逛<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AE%B6%E5%85%B7.md#1">家具</a>市场，就会有不少启发——许多别出心裁的“家具小品”，占地不多却能有收纳的功效，只要合适选择即可达致电美化居室外的效果，这已成为家居布置的一种时尚。</p>
 <p>　　鞋柜</p>
 <p>　　对于家中的鞋子，鞋柜是“收容所”。若在鞋柜上贴面镜子，出门前整理着装更方便，带小凳的鞋柜，既不占地方又方便家人穿脱鞋子。</p>
 <p>　　书报筐</p>
@@ -14,48 +14,41 @@
 <p>　　挂衣架</p>
 <p>　　时尚的挂衣架如一个个小型雕塑，不挂衣服时如一件漂亮的摆件，挂上外套、围巾让居室保持整洁与方便。</p>
 <p>　　雨伞架。不仅收纳雨伞等用具，由于其造型独特别致，犹如居室中不可缺少的小点缀。</p>
-<p>　　小<ahref="https://github.com/baxuov3928/djy/blob/master/gb/tag/%E5%AE%B6%E5%85%B7.md#1">家具</a>的种类很多，只要巧妙利用，便能为家添新意。 @<font color=#ffffff>(http://www.dajiyuan.com)</font></p>
+<p>　　小<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AE%B6%E5%85%B7.md#1">家具</a>的种类很多，只要巧妙利用，便能为家添新意。 @<font color=#ffffff>(http://www.dajiyuan.com)</font></p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/3/10/10/n391324.md#1">一草原男子在广州街头50元“出租”自己</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/18/n12558508.md#1">植物也有个性 5种疗愈身心的室内植物</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/15/n12550410.md#1">买蔬果要选对时间 大卖场新鲜货上架秘辛</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/17/n12556081.md#1">凡士林不只保湿 有5大妙用 挑选看1点</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/3/10/10/n391324.md#1">一草原男子在广州街头50元“出租”自己</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740608.md#1">整理房间能改变人生？快速整理卧室5大秘诀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/5/n13727469.md#1">觉得愤怒不安？其实害你受苦的是“第二枝箭”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741025.md#1">三招教您补足退休储蓄</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/baxuov3928/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232804.md#1" target="_blank">共产暴政录：精于绑票和洗劫的方志敏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/9/13/n12399763.md#1">既是“于青菜”又是“于青天”——清朝廉吏于成龙</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/5/n12528186.md#1">【思想领袖】章家敦：美国危险 需击退中共</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/18/n12557501.md#1">【西岸观察】美国大选舞弊中的委内瑞拉因素</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/18/n12557186.md#1">【拍案惊奇】神秘警卫深揭舞弊 黑手党老大做票</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/16/n12554489.md#1">【新闻看点】拜登舞弊证据在握 川普拟大翻盘</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/17/n12556437.md#1">国会议员：川普将获胜 使选票得到正确统计</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/17/n12556049.md#1">嘉义女子一次拔20颗牙 隔天昏迷 抢救不治</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/17/n12556222.md#1">珉豪军中回忆有TWICE的歌 感谢女团给士兵力量</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/17/n12556732.md#1">林青霞生日出新书 帖文证实与富商丈夫情未变</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/16/n12553368.md#1">台研发全球首株抗体 可直接杀死癌细胞</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/17/n12555428.md#1">甘肃男子带“老虎”逛街 路人回头率100%</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/baxuov3928/djy/blob/master/gb/20/11/11/n12542173.md#1">常喝1种饮料大脑老4岁 这些习惯让脑部老得快</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/baxuov3928/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/baxuov3928/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/3/10/18/n395865.htm">小家具家居神来之笔</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/3/10/18/n395865.htm">小家具家居神来之笔</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/baxuov3928/djy/blob/master/gb/3/10/18/n395865.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/baxuov3928/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/baxuov3928/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/baxuov3928/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/baxuov3928/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/baxuov3928/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/3/10/18/n395865.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
